--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "version": "0.1.0",
   "author": "Tom Phillips <info@tomphill.co.uk>",
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "@types/webpack": "^4.41.25",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.27.0",
     "gatsby-image": "^2.4.16",
+    "gatsby-plugin-loadable-components-ssr": "^2.1.0",
     "gatsby-plugin-manifest": "^2.4.24",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-source-filesystem": "^2.3.25",
-    "gatsby-source-wordpress-experimental": "^3.1.3",
+    "gatsby-source-wordpress-experimental": "^5.0.0",
     "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
