--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@loadable/component": "^5.14.1",
     "@types/webpack": "^4.41.25",
     "babel-plugin-styled-components": "^1.11.1",
+    "focus-within-polyfill": "^5.1.0",
     "gatsby": "^2.27.0",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-loadable-components-ssr": "^2.1.0",
